--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,18 @@
 .idea
 
 # libs
-node_modules
+node_modules/
+.npm
+npm-debug.log*
+package-lock.json
+.yarn-integrity
+yarn-debug.log*
+yarn-error.log*
+
+# logs
+logs
+*.log
+
+# TypeScript
+typings/
+*.tsbuildinfo
