--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=04c2bb26bc90"
   },
   "dependencies": {
     "vue": "^3.2.47",
@@ -35,6 +36,7 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "chromatic": "^6.17.3",
     "cypress": "^12.7.0",
     "eslint": "^8.34.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -48,5 +50,7 @@
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
     "vue-tsc": "^1.2.0"
-  }
+  },
+  "readme": "README.md",
+  "_id": "vue_component_library@0.0.0"
 }
