--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@storybook/vue3": "^7.0.6",
     "@storybook/vue3-vite": "^7.0.6",
     "@types/node": "^18.14.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
@@ -39,16 +41,20 @@
     "chromatic": "^6.17.3",
     "cypress": "^12.7.0",
     "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.9.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.62.0",
     "start-server-and-test": "^2.0.0",
-    "storybook": "^7.0.6",
+    "storybook": "^7.0.7",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
+    "vue-eslint-parser": "^9.1.1",
     "vue-tsc": "^1.2.0"
   },
   "readme": "README.md",
