--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "chromatic": "npx chromatic --project-token=CHROMATIC_PROJECT_TOKEN"
   },
   "dependencies": {
+    "@govflanders/vl-ui-design-system-style": "^1.0.0-alpha.1",
+    "@govflanders/vl-ui-design-system-vue3": "^1.0.0-alpha.1",
+    "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -28,8 +31,8 @@
     "@storybook/addon-interactions": "^7.0.6",
     "@storybook/addon-links": "^7.0.6",
     "@storybook/blocks": "^7.0.6",
+    "@storybook/builder-vite": "^7.0.7",
     "@storybook/testing-library": "^0.0.14-next.2",
-    "@storybook/vue3": "^7.0.6",
     "@storybook/vue3-vite": "^7.0.6",
     "@types/node": "^18.14.2",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
