--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "vue_component_library",
+  "name": "vue-components",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/vue-components.umd.cjs",
+  "module": "./dist/vue-components.js",
   "version": "0.0.0",
+  "exports": {
+    ".": {
+      "import": "./dist/vue-components.js",
+      "require": "./dist/vue-components.umd.cjs"
+    }
+  },
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
+    "build:watch": "run-p type-check build-only:watch",
     "preview": "vite preview",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "test:unit": "cypress run --component",
     "test:unit:dev": "cypress open --component",
     "build-only": "vite build",
+    "build-only:watch": "vite build --watch",
     "type-check": "vue-tsc --noEmit -p tsconfig.cypress-ct.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
@@ -58,6 +72,7 @@
     "sass": "^1.62.0",
     "start-server-and-test": "^2.0.0",
     "storybook": "^7.0.7",
+    "tslib": "^2.5.0",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
     "vue-eslint-parser": "^9.1.1",
