--- a/package.json
+++ b/package.json
@@ -1,16 +1,34 @@
 {
-  "name": "vue_component_library",
+  "name": "vue-components",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/vue-components.umd.cjs",
+  "module": "./dist/vue-components.js",
   "version": "0.0.0",
+  "exports": {
+    ".": {
+      "import": "./dist/vue-components.js",
+      "require": "./dist/vue-components.umd.cjs"
+    },
+    "./dist/style.css": {
+      "import": "./dist/style.css",
+      "require": "./dist/style.css"
+    }
+  },
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
+    "build:watch": "run-p type-check build-only:watch",
     "preview": "vite preview",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "test:unit": "cypress run --component",
     "test:unit:dev": "cypress open --component",
     "build-only": "vite build",
+    "build-only:watch": "vite build --watch",
     "type-check": "vue-tsc --noEmit -p tsconfig.cypress-ct.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
@@ -19,6 +37,10 @@
     "chromatic": "npx chromatic --project-token=CHROMATIC_PROJECT_TOKEN"
   },
   "dependencies": {
+    "@govflanders/vl-ui-design-system-style": "^1.0.0-alpha.2",
+    "@govflanders/vl-ui-design-system-vue3": "^1.0.0-alpha.2",
+    "axios": "^1.4.0",
+    "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -28,10 +50,12 @@
     "@storybook/addon-interactions": "^7.0.6",
     "@storybook/addon-links": "^7.0.6",
     "@storybook/blocks": "^7.0.6",
+    "@storybook/builder-vite": "^7.0.7",
     "@storybook/testing-library": "^0.0.14-next.2",
-    "@storybook/vue3": "^7.0.6",
     "@storybook/vue3-vite": "^7.0.6",
     "@types/node": "^18.14.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
@@ -39,17 +63,28 @@
     "chromatic": "^6.17.3",
     "cypress": "^12.7.0",
     "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.9.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "sass": "^1.62.0",
     "start-server-and-test": "^2.0.0",
-    "storybook": "^7.0.6",
+    "storybook": "^7.0.7",
+    "tslib": "^2.5.0",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
+    "vue-eslint-parser": "^9.1.1",
     "vue-tsc": "^1.2.0"
+  },
+  "peerDependencies": {
+    "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes"
   },
   "readme": "README.md",
   "_id": "vue_component_library@0.0.0"
