--- a/package.json
+++ b/package.json
@@ -19,16 +19,14 @@
   },
   "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "run-p type-check build-only",
     "build:watch": "run-p type-check build-only:watch",
-    "preview": "vite preview",
+    "build-only": "vite build",
+    "build-only:watch": "vite build --watch",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "test:unit": "cypress run --component",
     "test:unit:dev": "cypress open --component",
-    "build-only": "vite build",
-    "build-only:watch": "vite build --watch",
     "type-check": "vue-tsc --noEmit -p tsconfig.cypress-ct.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
@@ -41,8 +39,7 @@
     "@govflanders/vl-ui-design-system-vue3": "^1.0.0-alpha.2",
     "axios": "^1.4.0",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
