--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@govflanders/vl-ui-design-system-style": "^1.0.0-alpha.2",
     "@govflanders/vl-ui-design-system-vue3": "^1.0.0-alpha.2",
+    "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes",
     "vue": "^3.2.47"
