--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,8 @@ repos:
     rev: v3.0.0-alpha.9-for-vscode
     hooks:
       - id: prettier
+        additional_dependencies:
+          - prettier@2.8.4
         types_or: [ts, javascript, scss, css, yaml, json, vue]
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v8.39.0
