#7 Setup cypress component testing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   "rules": {
     // code quality and code style rules:
     "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
     // to avoid conflicts, code formatting rules should go in .prettierrc!
     "prettier/prettier": "error"
