--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.1.3",
     "chromatic": "^6.17.3",
-    "cypress": "^12.7.0",
+    "cypress": "^12.11.0",
+    "cypress-watch-and-reload": "^1.10.6",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
