Adres crab component (#5)
* #5 Multiselect filter fallback messages

* #5 Add validation to adres-crab

* #5 Make validation configurable

* #5 Try to fix build

* #5 Fix locale

* #5 Bind required labels to config

* #5 Fix storybook load async component without wrapper component

* #5 Make api url configurable

* #5 Add stories for custom api and config

* #5 Rework adres crab api

* #5 Conditional busnummer

* #10 Fix PR comments

* #10 Optional huisnummer and busnummer + both free text possibility

* #10 Try to fix scoped style

* #10 Fix backspace bug after field touched

* #10 Reset free-text states on parent change

* #10 Error handling gemeenten Waals + BH gewest

* #10 Country pre selection via config - input field hidden

* #10 Rework output format and validation

* #10 Fix huisnummer sorting

* #10 Add 2-way binding

* #10 Add story initial value

* #10 Increase options limit on multi select + configurable

* tweak 'no options' message

* #10 Preserve search input

* #10 Disable tab in multi select search when no value is selected

---------

Co-authored-by: Vanderhaegen Cedrik <cedrik.vanderhaegen@vlaanderen.be>

--- a/package.json
+++ b/package.json
@@ -37,11 +37,17 @@
   "dependencies": {
     "@govflanders/vl-ui-design-system-style": "^1.0.0-alpha.2",
     "@govflanders/vl-ui-design-system-vue3": "^1.0.0-alpha.2",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
+    "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-i18n": "9"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@storybook/addon-essentials": "^7.0.6",
     "@storybook/addon-interactions": "^7.0.6",
