--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
           - prettier@2.8.4
         types_or: [ts, javascript, scss, css, yaml, json, vue]
   - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.39.0
+    rev: v8.34.0
     hooks:
       - id: eslint
         additional_dependencies:
@@ -26,5 +26,5 @@ repos:
           - eslint-plugin-vue@9.11.0
           - '@vue/eslint-config-prettier@7.1.0'
           - '@vue/eslint-config-typescript@11.0.2'
-        files: \.[jt]sx|\.vue?$ # *.js, *.jsx, *.ts and *.tsx
+        files: \.[jt]sx$ # *.js, *.jsx, *.ts and *.tsx
         types: [file]
