--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/vue-components.umd.cjs",
-  "module": "./dist/vue-components.js",
+  "main": "./dist/vue-components.umd.js",
+  "module": "./dist/vue-components.es.js",
   "version": "0.0.0",
   "exports": {
     ".": {
-      "import": "./dist/vue-components.js",
-      "require": "./dist/vue-components.umd.cjs"
+      "import": "./dist/vue-components.es.js",
+      "require": "./dist/vue-components.umd.js"
     },
     "./dist/style.css": {
-      "import": "./dist/style.css",
-      "require": "./dist/style.css"
+      "import": "./dist/vue-components.css",
+      "require": "./dist/vue-components.css"
     }
   },
+  "types": "./dist/main.d.ts",
   "private": true,
   "scripts": {
-    "build": "run-p type-check build-only",
+    "build": "rm -rf dist && run-p type-check build-only",
     "build:watch": "run-p type-check build-only:watch",
     "build-only": "vite build",
     "build-only:watch": "vite build --watch",
     "test:unit": "cypress run --component --browser=chrome",
     "test:unit:dev": "cypress open --component",
-    "type-check": "vue-tsc --noEmit -p tsconfig.cypress-ct.json --composite false",
+    "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
@@ -41,7 +42,7 @@
     "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes",
-    "vue": "^3.2.47",
+    "vue": "^3.3.4",
     "vue-i18n": "9"
   },
   "devDependencies": {
@@ -57,7 +58,7 @@
     "@types/node": "^18.14.2",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.2",
@@ -73,16 +74,19 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
+    "path": "^0.12.7",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-typescript2": "^0.34.1",
     "sass": "^1.62.0",
     "start-server-and-test": "^2.0.0",
     "storybook": "^7.0.7",
     "tslib": "^2.5.0",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
+    "vite-plugin-dts": "^2.3.0",
     "vue-eslint-parser": "^9.1.1",
     "vue-tsc": "^1.2.0"
   },
