--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -44,6 +44,8 @@ jobs:
           always-auth: true
           node-version: 16
           registry-url: https://npm.pkg.github.com/
+      - run: echo @onroerend-erfgoed:https://npm.pkg.github.com/ > ~/.npmrc
+      - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
       - run: yarn build
       - run: yarn publish
         env:
