--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -44,8 +44,10 @@ jobs:
           always-auth: true
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-      - run: echo @onroerend-erfgoed:https://npm.pkg.github.com/ > ~/.npmrc
-      - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
+      - run: |
+          echo @onroerend-erfgoed:registry=https://npm.pkg.github.com/ > ~/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
+      - run: cat ~/.npmrc
       - run: yarn build
       - run: yarn publish
         env:
