--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -19,6 +19,12 @@ jobs:
       - run: yarn ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GOVFLANDERS_NPM_TOKEN}}
+      - run: yarn test:unit
+      - run: yarn build
+      - uses: actions/upload-artifact@v3
+        with:
+          name: bundle
+          path: dist/
 
   publish-gpr:
     needs: build
@@ -28,16 +34,11 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/download-artifact@v3
         with:
-          always-auth: true
-          node-version: '16.x'
-          registry-url: https://registry.npmjs.org
-      - name: Install dependencies
-        run: yarn ci
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GOVFLANDERS_NPM_TOKEN}}
+          name: bundle
+      - name: Display structure of downloaded files
+        run: ls -R
       - name: Build and publish
         uses: actions/setup-node@v3
         with:
@@ -48,7 +49,6 @@ jobs:
           echo @OnroerendErfgoed:registry=https://npm.pkg.github.com/ > ~/.npmrc
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
       - run: cat ~/.npmrc
-      - run: yarn build
       - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
