--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   ],
   "main": "./dist/vue-components.umd.js",
   "module": "./dist/vue-components.es.js",
-  "version": "0.0.0",
+  "typings": "./dist/main.d.ts",
+  "version": "0.0.3",
   "exports": {
     ".": {
       "import": "./dist/vue-components.es.js",
@@ -31,13 +32,14 @@
   "types": "./dist/main.d.ts",
   "scripts": {
     "ci": "yarn install --frozen-lockfile",
-    "build": "rm -rf dist && run-p type-check build-only",
+    "build": "yarn type-check && yarn build-only && yarn type-generation",
     "build:watch": "run-p type-check build-only:watch",
     "build-only": "vite build",
     "build-only:watch": "vite build --watch",
     "test:unit": "cypress run --component --browser=chrome",
     "test:unit:dev": "cypress open --component",
     "type-check": "vue-tsc --noEmit",
+    "type-generation": "vue-tsc --declaration --emitDeclarationOnly",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
@@ -96,9 +98,8 @@
     "tslib": "^2.5.0",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
-    "vite-plugin-dts": "^2.3.0",
     "vue-eslint-parser": "^9.1.1",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^1.6.5"
   },
   "peerDependencies": {
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes"
