#16 Fix crab component error addresses call 404

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
+    "@typescript-eslint/no-empty-function": "warn",
     // to avoid conflicts, code formatting rules should go in .prettierrc!
     "prettier/prettier": "error"
   },
