--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "main": "./dist/vue-components.umd.js",
   "module": "./dist/vue-components.es.js",
-  "typings": "./dist/main.d.ts",
+  "typings": "./dist/src/main.d.ts",
   "version": "0.0.3",
   "exports": {
     ".": {
@@ -29,7 +29,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
-  "types": "./dist/main.d.ts",
+  "types": "./dist/src/main.d.ts",
   "scripts": {
     "ci": "yarn install --frozen-lockfile",
     "build": "yarn type-check && yarn build-only && yarn type-generation",
