--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "@vueuse/core": "^10.1.2",
+    "ag-grid-community": "^29.3.5",
+    "ag-grid-vue3": "^29.3.5",
     "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes",
@@ -102,7 +104,8 @@
     "vue-tsc": "^1.6.5"
   },
   "peerDependencies": {
-    "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes"
+    "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes",
+    "@govflanders/vl-ui-design-system-style": "^1.0.0-alpha.3"
   },
   "_id": "vue_component_library@0.0.0"
 }
