#28 Add container component with optional slots

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "cypress/support/component.*",
     "cypress/support/commands.ts"
   ],
+  "exclude": ["src/stories/**"],
   "compilerOptions": {
     "outDir": "dist",
     "baseUrl": ".",
