--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
-    "@typescript-eslint/no-empty-function": "warn",
+    "@typescript-eslint/no-empty-function": "off",
     // to avoid conflicts, code formatting rules should go in .prettierrc!
     "prettier/prettier": "error"
   },
