--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "test:unit": "cypress run --component --browser=chrome",
     "test:unit:dev": "cypress open --component",
     "type-check": "vue-tsc --noEmit",
-    "type-generation": "vue-tsc --declaration --emitDeclarationOnly",
+    "type-generation": "vue-tsc --declaration --emitDeclarationOnly ",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
@@ -104,8 +104,8 @@
     "vue-tsc": "^1.6.5"
   },
   "peerDependencies": {
-    "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes",
-    "@govflanders/vl-ui-design-system-style": "^1.0.0-alpha.3"
+    "@govflanders/vl-ui-design-system-style": "^1.0.0-alpha.3",
+    "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes"
   },
   "_id": "vue_component_library@0.0.0"
 }
