--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ag-grid-community": "^29.3.5",
     "ag-grid-vue3": "^29.3.5",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes",
     "vue": "^3.3.4",
