--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@storybook/addon-essentials": "^7.0.6",
     "@storybook/addon-interactions": "^7.0.6",
     "@storybook/addon-links": "^7.0.6",
+    "@storybook/addon-viewport": "^7.0.24",
     "@storybook/blocks": "^7.0.6",
     "@storybook/builder-vite": "^7.0.7",
     "@storybook/testing-library": "^0.0.14-next.2",
