--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ag-grid-vue3": "^29.3.5",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "libphonenumber-js": "^1.10.37",
     "lodash": "^4.17.21",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes",
     "vue": "^3.3.4",
