--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "ol-ext": "^4.0.10",
     "proj4": "^2.9.0",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes?0.18.0",
+    "uuid": "^9.0.0",
     "vue": "^3.3.4",
     "vue-i18n": "9"
   },
