Feature/79 vue3 zoneerder (#88)
* in progress

* in progress

* cleanup, add unit tests

* import main.scss

* revert package lowercase, use scss variables

* requested changes

* mod-error on invalid wkt

* add unique identifier to layerswitcher radios

* testomgeving beschermingenWmsUrl

* requested changes

* Update crab-api.service.ts

* Update crab-api.service.ts

--- a/package.json
+++ b/package.json
@@ -65,7 +65,12 @@
     "date-fns": "^2.30.0",
     "libphonenumber-js": "^1.10.37",
     "lodash": "^4.17.21",
+    "ol": "^7.4.0",
+    "ol-contextmenu": "^5.2.1",
+    "ol-ext": "^4.0.10",
+    "proj4": "^2.9.0",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes?0.18.0",
+    "uuid": "^9.0.0",
     "vue": "^3.3.4",
     "vue-i18n": "9"
   },
@@ -80,7 +85,9 @@
     "@storybook/builder-vite": "^7.2.1",
     "@storybook/testing-library": "^0.2.0",
     "@storybook/vue3-vite": "^7.2.1",
+    "@trivago/prettier-plugin-sort-imports": "4.1.0",
     "@types/node": "^18.14.2",
+    "@types/proj4": "^2.5.2",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-vue": "^4.2.3",
