--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@trivago/prettier-plugin-sort-imports": "4.1.0",
     "@types/node": "^18.14.2",
     "@types/proj4": "^2.5.2",
+    "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-vue": "^4.2.3",
