--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@govflanders/vl-ui-design-system-style": "^1.0.0-alpha.3",
     "@govflanders/vl-ui-design-system-vue3": "^1.0.0-alpha.3",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
+    "@tinymce/tinymce-vue": "^4",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "@vueuse/core": "^10.4.1",
@@ -88,6 +89,7 @@
     "@trivago/prettier-plugin-sort-imports": "4.1.0",
     "@types/node": "^18.14.2",
     "@types/proj4": "^2.5.2",
+    "@types/tinymce": "^4.6.6",
     "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
