--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@govflanders/vl-ui-autocomplete": "^18.1.1",
     "@govflanders/vl-ui-design-system-style": "^1.0.0-alpha.3",
     "@govflanders/vl-ui-design-system-vue3": "^1.0.0-alpha.3",
+    "@govflanders/vl-ui-select": "^20.0.10",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@tinymce/tinymce-vue": "^4",
     "@vuelidate/core": "^2.0.2",
