--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "test:unit:dev": "cypress open --component",
     "type-check": "vue-tsc --noEmit",
     "type-generation": "vue-tsc --declaration --emitDeclarationOnly",
-    "lint": "eslint -c public/.eslintrc.json . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -113,7 +113,7 @@
     "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "prettier": "^3.1.1",
+    "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-copy": "^3.4.0",
