--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "@storybook/builder-vite": "^7.6.4",
     "@storybook/testing-library": "^0.2.2",
     "@storybook/vue3-vite": "^7.6.4",
-    "@trivago/prettier-plugin-sort-imports": "4.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^18.14.2",
     "@types/proj4": "^2.5.2",
     "@types/tinymce": "^4.6.6",
@@ -103,17 +103,17 @@
     "chromatic": "^6.17.3",
     "cypress": "^13.2.0",
     "cypress-watch-and-reload": "^1.10.6",
-    "eslint": "^8.34.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "prettier": "^2.8.4",
+    "prettier": "^3.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-copy": "^3.4.0",
