#3 Fix precommit issues

--- a/src/stories/tsconfig.json
+++ b/src/stories/tsconfig.json
@@ -3,5 +3,5 @@
   // Allows the IDE to resolve path aliases defined
   // in the main tsconfig.json in this excluded folder.
   "extends": "../../tsconfig.json",
-  "exclude": []
+  "exclude": [],
 }
