--- a/package.json
+++ b/package.json
@@ -65,11 +65,13 @@
     "ag-grid-vue3": "^29.3.5",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "guid-typescript": "^1.0.9",
     "libphonenumber-js": "^1.10.37",
     "lodash": "^4.17.21",
     "ol": "^7.4.0",
     "ol-contextmenu": "^5.2.1",
     "ol-ext": "^4.0.10",
+    "pinia": "^2.1.7",
     "proj4": "^2.9.0",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes?0.18.0",
     "uuid": "^9.0.0",
