--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,26 +5,19 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.9-for-vscode
+  - repo: local
     hooks:
       - id: prettier
-        additional_dependencies:
-          - prettier@3.2.3
+        name: run format
+        language: system
+        entry: bash -c 'yarn format'
+        pass_filenames: false
         types_or: [ts, javascript, scss, css, yaml, json, vue]
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.56.0
+  - repo: local
     hooks:
-      - id: eslint
-        additional_dependencies:
-          - eslint@8.56.0
-          - eslint-config-prettier@8.8.0
-          - eslint-import-resolver-typescript@3.5.5
-          - eslint-plugin-cypress@2.12.1
-          - eslint-plugin-import@2.27.5
-          - eslint-plugin-prettier@5.1.3
-          - eslint-plugin-vue@9.11.0
-          - '@vue/eslint-config-prettier@7.1.0'
-          - '@vue/eslint-config-typescript@11.0.2'
-        files: \.[jt]sx|\.vue?$ # *.js, *.jsx, *.ts, *.tsx and *.vue
-        types: [file]
+      - id: lint
+        name: run lint
+        language: system
+        entry: bash -c 'yarn lint'
+        pass_filenames: false
+        types_or: [ts, javascript, scss, css, yaml, json, vue]
