--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@govflanders/vl-ui-select": "^20.0.10",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@tinymce/tinymce-vue": "^4",
+    "@turf/turf": "^6.5.0",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "@vueuse/core": "^10.4.1",
