--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "@govflanders/vl-ui-select": "^20.0.10",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@tinymce/tinymce-vue": "^4",
-    "@turf/turf": "^6.5.0",
+    "@turf/boolean-overlap": "^6.5.0",
+    "@turf/intersect": "^6.5.0",
+    "@turf/union": "^6.5.0",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "@vueuse/core": "^10.4.1",
@@ -105,7 +107,7 @@
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.1.3",
     "chromatic": "^6.17.3",
-    "cypress": "^13.2.0",
+    "cypress": "13.7.2",
     "cypress-watch-and-reload": "^1.10.6",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.8.0",
