--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           name: dist
           path: dist/
+          include-hidden-files: true
 
   publish-gpr:
     needs: build
