--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "proj4": "^2.9.0",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes?0.21.1",
     "quill-html-edit-button": "^3.0.0",
+    "quill-toggle-fullscreen-button": "^0.1.3",
     "uuid": "^9.0.0",
     "vue": "^3.5.10",
     "vue-i18n": "9",
