--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@govflanders/vl-ui-autocomplete": "^18.1.1",
-    "@govflanders/vl-ui-design-system-style": "^1.0.1-alpha.0",
-    "@govflanders/vl-ui-design-system-vue3": "^1.0.2-alpha.0",
+    "@govflanders/vl-ui-design-system-style": "^1.0.17",
+    "@govflanders/vl-ui-design-system-vue3": "^3.0.7",
     "@govflanders/vl-ui-select": "^20.0.10",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@tinymce/tinymce-vue": "^4",
