--- a/package.json
+++ b/package.json
@@ -85,15 +85,15 @@
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@rushstack/eslint-patch": "^1.2.0",
-    "@storybook/addon-essentials": "^7.6.4",
-    "@storybook/addon-interactions": "^7.6.4",
-    "@storybook/addon-links": "^7.6.4",
-    "@storybook/addon-mdx-gfm": "^7.6.4",
-    "@storybook/addon-viewport": "^7.6.4",
-    "@storybook/blocks": "^7.6.4",
-    "@storybook/builder-vite": "^7.6.4",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/addon-mdx-gfm": "^8.4.7",
+    "@storybook/addon-viewport": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/builder-vite": "^8.4.7",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/vue3-vite": "^7.6.4",
+    "@storybook/vue3-vite": "^8.4.7",
     "@trivago/prettier-plugin-sort-imports": "4.1.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "20",
@@ -121,11 +121,13 @@
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "prettier": "^2.8.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rollup": "^4.30.0",
     "rollup-plugin-visualizer": "^5.13.1",
     "sass": "^1.62.0",
     "start-server-and-test": "^2.0.0",
-    "storybook": "^7.6.4",
+    "storybook": "^8.4.7",
     "tslib": "^2.5.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.10",
