--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@storybook/vue3-vite": "^8.4.7",
     "@trivago/prettier-plugin-sort-imports": "4.1.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/lodash": "^4.17.14",
     "@types/node": "20",
     "@types/proj4": "^2.5.2",
     "@types/tinymce": "^4.6.6",
