Update workflow for pre-release

--- a/.github/workflows/pre-release-package-manual.yml
+++ b/.github/workflows/pre-release-package-manual.yml
@@ -61,6 +61,6 @@ jobs:
           echo @OnroerendErfgoed:registry=https://npm.pkg.github.com/ > ~/.npmrc
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
       - run: cat ~/.npmrc
-      - run: yarn publish
+      - run: yarn publish --tag alpha
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
