--- a/.github/workflows/pre-release-package-manual.yml
+++ b/.github/workflows/pre-release-package-manual.yml
@@ -26,6 +26,15 @@ jobs:
       - name: Update version in package.json
         run: |
           jq ".version = \"${{ inputs.version }}\"" package.json > package.json.tmp && mv package.json.tmp package.json
+      - name: Commit updated package.json
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add package.json
+          git commit -m "Update version to ${{ inputs.version }}"
+          git push origin ${{ inputs.branch }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: yarn ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GOVFLANDERS_NPM_TOKEN }}
@@ -60,7 +69,6 @@ jobs:
       - run: |
           echo @OnroerendErfgoed:registry=https://npm.pkg.github.com/ > ~/.npmrc
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
-      - run: cat ~/.npmrc
-      - run: yarn publish --tag alpha
+          yarn publish --tag alpha --non-interactive
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
