--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -19,8 +19,7 @@ jobs:
         run: yarn
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GOVFLANDERS_NPM_TOKEN}}
-      - name: Cypress run
-        uses: cypress-io/github-action@v5
+      - name: Run Cypress with Coverage
         run: yarn cypress run --component --browser=chrome -e codeCoverageTasksRegistered=true
       - name: Generate Coverage Report
         run: yarn nyc report --reporter=text-summary
