#386 Fix container tabs max width

--- a/package.json
+++ b/package.json
@@ -136,5 +136,6 @@
     "vue": "^3.5.13",
     "vue-eslint-parser": "^9.1.1",
     "vue-tsc": "^2.2.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
