#406 add util classes

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "axios-mock-adapter": "^1.22.0",
     "date-fns": "^2.30.0",
     "guid-typescript": "^1.0.9",
+    "jsts": "2.7.2",
     "libphonenumber-js": "^1.10.37",
     "lodash": "^4.17.21",
     "ol": "^7.4.0",
@@ -102,6 +103,7 @@
     "@storybook/vue3-vite": "^8.4.7",
     "@trivago/prettier-plugin-sort-imports": "4.1.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/jsts": "^0.17.22",
     "@types/lodash": "^4.17.14",
     "@types/node": "20",
     "@types/proj4": "^2.5.2",
