#464 wip adres refactor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["./src/components/*"],
+      "@composables/*": ["./src/composables/*"],
       "@directives/*": ["./src/directives/*"],
       "@services/*": ["./src/services/*"],
       "@models/*": ["./src/models/*"],
